--- a/AutoClicker/AutoClicker/AutoClicker.csproj
+++ b/AutoClicker/AutoClicker/AutoClicker.csproj
@@ -66,11 +66,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="AutoClickerMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AutoClickerMainForm.Designer.cs">
+      <DependentUpon>AutoClickerMainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="GlobalEventProvider.cs">
       <SubType>Component</SubType>
@@ -82,8 +82,8 @@
     <Compile Include="MouseEventExtArgs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="AutoClickerMainForm.resx">
+      <DependentUpon>AutoClickerMainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
